# ffxiv-wiki

./: .gitignore  Cargo.toml
src/: main.rs
web/: config.toml
web/templates/: index.html  page.html
